ec2.yml
AWSTemplateFormatVersion: 2010-09-09
Description: EC2 Instance with Instance profile role to access S3 buckets

Parameters:
  KeyName:
    Description: Key name to SSH to VM's. 
    Type: AWS::EC2::KeyPair::KeyName

Resources:
  MyCICDEC2InstanceProfileRole:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action: 'sts:AssumeRole'
      Path: /
      Policies:
        - PolicyName: MyCICDEC2InstanceProfilePolicy
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - 's3:Get*'
                  - 's3:List*'
                Resource: '*'

  MyInstanceProfile:
    Type: 'AWS::IAM::InstanceProfile'
    Properties:
      Path: /
      Roles:
        - !Ref MyCICDEC2InstanceProfileRole


  MySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: My SG with port 22, 8080 and 80 inbound
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8080'          
          ToPort: '8080'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
 
  MyStageVMInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0a695f0d95cefc163
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      SecurityGroups:
        - !Ref MySecurityGroup
      IamInstanceProfile: !Ref MyInstanceProfile
      Tags:
        - Key: Name        
          Value: dev
      UserData: 
        Fn::Base64: |  
          #!/bin/bash
          sudo apt-get update
          sudo apt install ruby -y
          sudo apt install wget -y 
          sudo apt install nginx -y
          cd /home/ubuntu
          wget https://aws-codedeploy-us-east-2.s3.amazonaws.com/latest/install
          chmod +x ./install
          sudo ./install auto      


  MyProdVMInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0a695f0d95cefc163
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      SecurityGroups:
        - !Ref MySecurityGroup
      IamInstanceProfile: !Ref MyInstanceProfile
      Tags:
        - Key: Name        
          Value: prod
      UserData: 
        Fn::Base64: |  
          #!/bin/bash
          sudo apt-get update
          sudo apt install ruby -y
          sudo apt install wget -y 
          sudo apt install nginx -y
          cd /home/ubuntu
          wget https://aws-codedeploy-us-east-2.s3.amazonaws.com/latest/install
          chmod +x ./install
          sudo ./install auto      


      
Outputs:
  StageAppURL:
    Description: Staging Application Access URL
    Value: !Sub 'http://${MyStageVMInstance.PublicDnsName}'          
  ProdAppURL:
    Description: Prod Application Access URL
    Value: !Sub 'http://${MyProdVMInstance.PublicDnsName}'
